# meowcake

./: Cargo.toml  build.rs  wrangler.toml
.github/workflows/: deploy.yml
src/: lib.rs
templates/: about.html  contact.html  index.html
templates/layouts/: base.html
templates/partials/: navbar.html
