[package]
name = "meowcake"
version = "0.1.0"
edition = "2021"
authors = ["Maria <golubevmt@gmail.com>"]


[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
askama = "0.16.0"

[build-dependencies]
html-minifier = "5.0.0"

[profile.dev.package.askama_derive]
opt-level = 3
